--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,5 @@
-server:
-  port: 8761
-
 spring:
+  profile:
+    active: dev
   application:
     name: ead-service-registry
-
-ead:
-  serviceRegistry:
-    username: admin
-    password: 'admin'
-
-eureka:
-  client:
-    fetchRegistry: false
-    register-with-eureka: false
-    service-url:
-      defaultZone: 'http://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
